syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "Identity.proto";
import "NullableGrpcDate.proto";
import "CustomerObligation.proto";
import "IncomeInList.proto";

message CustomerOnSA {
    int32 CustomerOnSAId = 1;

    int32 SalesArrangementId = 2;
    
    repeated cis.types.Identity CustomerIdentifiers = 3;
    
    int32 CustomerRoleId = 4;
    
    bool HasPartner = 5;
    
    string FirstNameNaturalPerson = 6;
    
    string Name = 7;
    
    cis.types.NullableGrpcDate DateOfBirthNaturalPerson = 8;

    repeated CustomerObligation Obligations = 9;

    repeated IncomeInList Incomes = 10;
}

message CustomerOnSABase {
    repeated cis.types.Identity CustomerIdentifiers = 1;
    
    string FirstNameNaturalPerson = 2;
    
    string Name = 3;
    
    cis.types.NullableGrpcDate DateOfBirthNaturalPerson = 4;
}